Update task schedule to use correct --data-dir

--- a/task_schedule.cfg
+++ b/task_schedule.cfg
@@ -36,8 +36,8 @@ alert       aca@head.cfa.harvard.edu
       cron * * * * *
       check_cron * * * * *
       exec fid_drift_mon.pl
-      exec plot_drift.py
-      exec plot_drift_model.py --data-dir /proj/sot/ska/data/fid_drift_mon
+      exec plot_drift.py --data-dir $ENV{SKA_DATA}/fid_drift_mon
+      exec plot_drift_model.py --data-dir $ENV{SKA_DATA}/fid_drift_mon
       exec /bin/cp $ENV{SKA_DATA}/fid_drift_mon/drift_*.png /data/mta4/www/ASPECT/fid_drift/
       context 1
       <check>
@@ -50,7 +50,7 @@ alert       aca@head.cfa.harvard.edu
 </task>
 
 # Remove disable_alerts file if there to enable alerts.  If there
-# is a recurring error in task processing them an email will go out 
+# is a recurring error in task processing them an email will go out
 # once a day.
 
 <task enable_alerts>
