Add commanded vs. observed position plot

--- a/task_schedule.cfg
+++ b/task_schedule.cfg
@@ -38,7 +38,9 @@ alert       aca@head.cfa.harvard.edu
       exec fid_drift_mon.pl
       exec plot_drift.py --data-dir $ENV{SKA_DATA}/fid_drift_mon
       exec plot_drift_model.py --data-dir $ENV{SKA_DATA}/fid_drift_mon
+      exec plot_starcheck_vs_telem.py --out $ENV{SKA_DATA}/fid_drift_mon/starcheck_telem.png
       exec /bin/cp $ENV{SKA_DATA}/fid_drift_mon/drift_*.png /data/mta4/www/ASPECT/fid_drift/
+      exec /bin/cp $ENV{SKA_DATA}/fid_drift_mon/starcheck_telem.png /data/mta4/www/ASPECT/fid_drift/
       context 1
       <check>
         <error>
