--- a/task_schedule.cfg
+++ b/task_schedule.cfg
@@ -9,16 +9,15 @@ iterations   1
 # Data files and directories.  The *_dir vars can have $ENV{} vars which
 # get interpolated.  (Note lack of task name after TST_DATA because this is just for test).
 
-data_dir     $ENV{SKA_DATA}/fid_drift_mon       # Data file directory
-log_dir      $ENV{SKA_DATA}/fid_drift_mon/logs  # Log file directory
-bin_dir      $ENV{SKA_SHARE}/fid_drift_mon            # Bin dir (optional, see task def'n)
-master_log   fid_drift_mon_master.log                  # Composite master log (created in log_dir)
+data_dir     $ENV{SKA}/data/fid_drift_mon       # Data file directory
+log_dir      $ENV{SKA}/data/fid_drift_mon/logs  # Log file directory
+master_log   fid_drift_mon.log                  # Composite master log (created in log_dir)
 
 # Email addresses that receive an alert if there was a severe error in
 # running jobs (i.e. couldn't start jobs or couldn't open log file).
 # Processing errors *within* the jobs are caught with watch_cron_logs
 
-alert       aca@head.cfa.harvard.edu
+alert       taldcroft@cfa.harvard.edu
 
 # Define task parameters
 #  cron: Job repetition specification ala crontab
@@ -35,12 +34,12 @@ alert       aca@head.cfa.harvard.edu
 <task fid_drift_mon>
       cron * * * * *
       check_cron * * * * *
-      exec fid_drift_mon.pl
-      exec plot_drift.py --data-dir $ENV{SKA_DATA}/fid_drift_mon
-      exec plot_drift_model.py --data-dir $ENV{SKA_DATA}/fid_drift_mon
-      exec plot_starcheck_vs_telem.py --out $ENV{SKA_DATA}/fid_drift_mon/starcheck_telem.png
-      exec /bin/cp $ENV{SKA_DATA}/fid_drift_mon/drift_*.png /data/mta4/www/ASPECT/fid_drift/
-      exec /bin/cp $ENV{SKA_DATA}/fid_drift_mon/starcheck_telem.png /data/mta4/www/ASPECT/fid_drift/
+      exec fid_drift_mon_update_fid_stats
+      exec fid_drift_mon_plot_drift --data-dir $ENV{SKA}/data/fid_drift_mon
+      exec fid_drift_mon_plot_drift_model --data-dir $ENV{SKA}/data/fid_drift_mon
+      exec fid_drift_mon_plot_starcheck_vs_telem --out $ENV{SKA}/data/fid_drift_mon/starcheck_telem.png
+      exec /bin/cp $ENV{SKA}/data/fid_drift_mon/drift_*.png /data/mta4/www/ASPECT/fid_drift/
+      exec /bin/cp $ENV{SKA}/data/fid_drift_mon/starcheck_telem.png /data/mta4/www/ASPECT/fid_drift/
       context 1
       <check>
         <error>
