Finish py3 packaging

--- a/fid_drift_mon/task_schedule.cfg
+++ b/fid_drift_mon/task_schedule.cfg
@@ -9,15 +9,15 @@ iterations   1
 # Data files and directories.  The *_dir vars can have $ENV{} vars which
 # get interpolated.  (Note lack of task name after TST_DATA because this is just for test).
 
-data_dir     $ENV{SKA}/data/fid_drift_mon       # Data file directory
-log_dir      $ENV{SKA}/data/fid_drift_mon/logs  # Log file directory
+data_dir     $ENV{SKA}/data/fid_drift_mon3       # Data file directory
+log_dir      $ENV{SKA}/data/fid_drift_mon3/logs  # Log file directory
 master_log   fid_drift_mon.log                  # Composite master log (created in log_dir)
 
 # Email addresses that receive an alert if there was a severe error in
 # running jobs (i.e. couldn't start jobs or couldn't open log file).
 # Processing errors *within* the jobs are caught with watch_cron_logs
 
-alert       taldcroft@cfa.harvard.edu
+alert       aca@cfa.harvard.edu
 
 # Define task parameters
 #  cron: Job repetition specification ala crontab
@@ -34,12 +34,12 @@ alert       taldcroft@cfa.harvard.edu
 <task fid_drift_mon>
       cron * * * * *
       check_cron * * * * *
-      exec fid_drift_mon_update_fid_stats
-      exec fid_drift_mon_plot_drift --data-dir $ENV{SKA}/data/fid_drift_mon
-      exec fid_drift_mon_plot_drift_model --data-dir $ENV{SKA}/data/fid_drift_mon
-      exec fid_drift_mon_plot_starcheck_vs_telem --out $ENV{SKA}/data/fid_drift_mon/starcheck_telem.png
-      exec /bin/cp $ENV{SKA}/data/fid_drift_mon/drift_*.png /data/mta4/www/ASPECT/fid_drift/
-      exec /bin/cp $ENV{SKA}/data/fid_drift_mon/starcheck_telem.png /data/mta4/www/ASPECT/fid_drift/
+      exec fid_drift_mon_copy_index --outdir /data/mta4/www/ASPECT/fid_drift/
+      exec fid_drift_mon_update_fid_stats --data-dir $ENV{SKA}/data/fid_drift_mon3
+      exec fid_drift_mon_plot_drift --data-dir $ENV{SKA}/data/fid_drift_mon3
+      exec fid_drift_mon_plot_starcheck_vs_telem --out $ENV{SKA}/data/fid_drift_mon3/starcheck_telem.png
+      exec /bin/cp $ENV{SKA}/data/fid_drift_mon3/drift_*.png /data/mta4/www/ASPECT/fid_drift/
+      exec /bin/cp $ENV{SKA}/data/fid_drift_mon3/starcheck_telem.png /data/mta4/www/ASPECT/fid_drift/
       context 1
       <check>
         <error>
