Add a script to install to web dir

--- a/fid_drift_mon/task_schedule.cfg
+++ b/fid_drift_mon/task_schedule.cfg
@@ -37,9 +37,7 @@ alert       aca@cfa.harvard.edu
       exec fid_drift_mon_update_fid_stats --data-dir $ENV{SKA}/data/fid_drift_mon3
       exec fid_drift_mon_plot_drift --data-dir $ENV{SKA}/data/fid_drift_mon3
       exec fid_drift_mon_plot_command_vs_telem --data-dir $ENV{SKA}/data/fid_drift_mon3 --out $ENV{SKA}/data/fid_drift_mon3/starcheck_telem.png
-      exec /bin/cp $ENV{SKA}/data/fid_drift_mon3/index.html /data/mta4/www/ASPECT/fid_drift3/
-      exec /bin/cp $ENV{SKA}/data/fid_drift_mon3/drift_*.png /data/mta4/www/ASPECT/fid_drift3/
-      exec /bin/cp $ENV{SKA}/data/fid_drift_mon3/starcheck_telem.png /data/mta4/www/ASPECT/fid_drift3/
+      exec fid_drift_install_report --data-dir $ENV{SKA}/data/fid_drift_mon3 --web-dir $ENV{SKA}/www/ASPECT/fid_drift_mon3
       context 1
       <check>
         <error>
