Convert fid_drift_mon to Python 3 package (#15)
* Initial commit of get_fid_data.py

* Initial functioning update_fid_stats in Python

* Clean-up perl comments etc

* Black format and other tweaks on plot_drift.py

* Packag-ify

* Modernize task schedule

* More tweaks

* Various updates

* Use --data-dir option correctly

* Add setup.py

* Finish py3 packaging

* Set to use fid_drift3 output dir

* Update name of script in task schedule

* Fix missing data in task_schedule

* Remove model plot in html

* Remove old model and shift plots

* Remove script to copy index and do in plot_drift

* Python 3 and update utils/calc_abs_cel_pointing

* Modernize imports

* Minor reformatting

* Update to use first samples for median props

* Remove stuff from index file

* Add option to do one obsid

* Add a script to install to web dir

* Return parser and remove unused args

* Remove unused column

* Revert to using end samples for median

* Whitespace fix

* More removed columns

* Add median positions at start

* Black

* Remove plot_drift_vs_model and simplify plot install

* Improve docstrings

* Configure LOGGER in plot_drift

* Black

* Black and have get_options return parser

* Use samples from obs start for plot

* Add missing path

* Fix incorrect option/args

* Format fixes

* Add missing .

* Make data dir if it doesn't exist

* Remove extra comma

* Update text for median offset calc

* Strip id_string and add tstart/stop

* Explicitly skip multi-obs multi-obi

* Manually exclude more obsids

* Update warning log messages

* Update for linting and formatting with ruff

* Some black updates

* Ruff format

* Ruff fixes

* Exclude another obsid

* Exclude longer 'short' intervals and redefine exp_time

* Change to double quotes

* Remove trailing comma

* Add validation notebook

---------

Co-authored-by: Tom Aldcroft <taldcroft@gmail.com>

--- a/fid_drift_mon/task_schedule.cfg
+++ b/fid_drift_mon/task_schedule.cfg
@@ -9,16 +9,15 @@ iterations   1
 # Data files and directories.  The *_dir vars can have $ENV{} vars which
 # get interpolated.  (Note lack of task name after TST_DATA because this is just for test).
 
-data_dir     $ENV{SKA_DATA}/fid_drift_mon       # Data file directory
-log_dir      $ENV{SKA_DATA}/fid_drift_mon/logs  # Log file directory
-bin_dir      $ENV{SKA_SHARE}/fid_drift_mon            # Bin dir (optional, see task def'n)
-master_log   fid_drift_mon_master.log                  # Composite master log (created in log_dir)
+data_dir     $ENV{SKA}/data/fid_drift_mon3       # Data file directory
+log_dir      $ENV{SKA}/data/fid_drift_mon3/logs  # Log file directory
+master_log   fid_drift_mon.log                  # Composite master log (created in log_dir)
 
 # Email addresses that receive an alert if there was a severe error in
 # running jobs (i.e. couldn't start jobs or couldn't open log file).
 # Processing errors *within* the jobs are caught with watch_cron_logs
 
-alert       aca@head.cfa.harvard.edu
+alert       aca@cfa.harvard.edu
 
 # Define task parameters
 #  cron: Job repetition specification ala crontab
@@ -35,12 +34,9 @@ alert       aca@head.cfa.harvard.edu
 <task fid_drift_mon>
       cron * * * * *
       check_cron * * * * *
-      exec fid_drift_mon.pl
-      exec plot_drift.py --data-dir $ENV{SKA_DATA}/fid_drift_mon
-      exec plot_drift_model.py --data-dir $ENV{SKA_DATA}/fid_drift_mon
-      exec plot_starcheck_vs_telem.py --out $ENV{SKA_DATA}/fid_drift_mon/starcheck_telem.png
-      exec /bin/cp $ENV{SKA_DATA}/fid_drift_mon/drift_*.png /data/mta4/www/ASPECT/fid_drift/
-      exec /bin/cp $ENV{SKA_DATA}/fid_drift_mon/starcheck_telem.png /data/mta4/www/ASPECT/fid_drift/
+      exec fid_drift_mon_update_fid_stats --data-dir $ENV{SKA}/data/fid_drift_mon3
+      exec fid_drift_mon_plot_drift --data-dir $ENV{SKA}/data/fid_drift_mon3  --web-dir $ENV{SKA}/www/ASPECT/fid_drift_mon3
+      exec fid_drift_mon_plot_command_vs_telem --data-dir $ENV{SKA}/data/fid_drift_mon3 --out $ENV{SKA}/www/ASPECT/fid_drift_mon3/starcheck_telem.png
       context 1
       <check>
         <error>
